# bindi

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
templates/: index.html
